--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -7,12 +7,140 @@
     background: top;
 }
 
- li,
- li:hover,
- li:active,
- li:focus,
- li:focus-visible,
- li:focus-within {
-    background-color: transparent!important;
-    background: transparent!important;
+aside nav div ul li {
+    background-color: rgba(0,0,0,0.1)!important;
+    background: red;
+}
+
+aside nav div ul li:hover {
+    background-color: rgba(0,0,0,0.9)!important;
+}
+
+
+
+
+
+#header > div[id="#menu"] {
+    -moz-transition: background 0.2s ease-in-out;
+    -webkit-transition: background 0.2s ease-in-out;
+    -ms-transition: background 0.2s ease-in-out;
+    transition: background 0.2s ease-in-out;
+    text-decoration: none;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    border-left: 1px solid rgba(99, 116, 133, 0.25);
+    height: calc(4rem - 1px);
+    line-height: 4rem;
+    margin-left: 0.5rem;
+    padding: 0 2rem;
+}
+
+    #header > div[id="#menu"]:before {
+        -moz-osx-font-smoothing: grayscale;
+        -webkit-font-smoothing: antialiased;
+        display: inline-block;
+        font-style: normal;
+        font-variant: normal;
+        text-rendering: auto;
+        line-height: 1;
+        text-transform: none !important;
+        font-family: 'Font Awesome 5 Free';
+        font-weight: 900;
+    }
+
+    #header > div[id="#menu"] span {
+        -moz-order: 1;
+        -webkit-order: 1;
+        -ms-order: 1;
+        order: 1;
+        font-family: "Lato", Helvetica, sans-serif;
+        font-size: 0.65rem;
+        font-weight: 900;
+        margin-right: 0.25rem;
+    }
+
+    #header > div[id="#menu"]:hover, #header > div[id="#menu"]:focus {
+        background-color: rgba(99, 116, 133, 0.075);
+        color: #000000;
+    }
+
+        #header > div[id="#menu"]:hover:before, #header > div[id="#menu"]:focus:before {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 6px%3B stroke: %23000000%3B %7D%3C/style%3E%3Cline x1='10' y1='30' x2='90' y2='30' /%3E%3Cline x1='10' y1='50' x2='90' y2='50' /%3E%3Cline x1='10' y1='70' x2='90' y2='70' /%3E%3C/svg%3E");
+        }
+
+    #header > div[id="#menu"]:before {
+        -moz-order: 2;
+        -webkit-order: 2;
+        -ms-order: 2;
+        order: 2;
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 6px%3B stroke: %23000000%3B %7D%3C/style%3E%3Cline x1='10' y1='30' x2='90' y2='30' /%3E%3Cline x1='10' y1='50' x2='90' y2='50' /%3E%3Cline x1='10' y1='70' x2='90' y2='70' /%3E%3C/svg%3E");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 1.75rem;
+        content: '';
+        float: right;
+        height: 1rem;
+        margin-left: 0.5rem;
+        opacity: 1;
+        width: 1rem;
+    }
+
+
+#header.alt {
+background-color: rgba(0,0,0, 0.4);
+border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+color: #ffffff;
+text-shadow: 2px 2px 3px black;
+position: fixed;
+}
+
+#header.alt > a:hover, #header.alt > a:focus {
+    color: #ffffff;
+}
+#header.alt > div:hover, #header.alt > div:focus {
+    color: #ffffff;
+    cursor: pointer;
+}
+#header.alt > div[id="#menu"] {
+    border-left: 1px solid rgba(255, 255, 255, 0.25);
+}
+
+    #header.alt > div[id="#menu"]:hover, #header.alt > div[id="#menu"]:focus {
+        background-color: rgba(255, 255, 255, 0.065);
+    }
+
+        #header.alt > div[id="#menu"]:hover:before, #header.alt > div[id="#menu"]:focus:before {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 6px%3B stroke: %23ffffff%3B %7D%3C/style%3E%3Cline x1='10' y1='30' x2='90' y2='30' /%3E%3Cline x1='10' y1='50' x2='90' y2='50' /%3E%3Cline x1='10' y1='70' x2='90' y2='70' /%3E%3C/svg%3E");
+        }
+
+    #header.alt > div[id="#menu"]:before {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 6px%3B stroke: %23ffffff%3B %7D%3C/style%3E%3Cline x1='10' y1='30' x2='90' y2='30' /%3E%3Cline x1='10' y1='50' x2='90' y2='50' /%3E%3Cline x1='10' y1='70' x2='90' y2='70' /%3E%3C/svg%3E");
+    }
+
+    @media screen and (max-width: 736px) {
+        #header > div[id="#menu"] {
+            height: calc(3rem - 1px);
+            line-height: 3rem;
+            padding: 0 1.5rem;
+        }
+
+            #header > div[id="#menu"]:before {
+                margin-left: 0;
+            }
+
+            #header > div[id="#menu"] span {
+                display: none;
+            }
+
+            #header > div[id="#menu"]:hover {
+                background-color: transparent;
+            }
+
 }
